[gd_scene load_steps=11 format=3 uid="uid://cnqd020df1l8u"]

[ext_resource type="Texture2D" uid="uid://dfh60akl6xjop" path="res://Assets/TEMPLATE ARTE SOZINHA.png" id="1_4qyb6"]
[ext_resource type="Script" uid="uid://bug2flxsxyrs" path="res://Scenes/page_result.gd" id="2_55ptn"]
[ext_resource type="FontFile" uid="uid://dgrnxjw2gm3le" path="res://Assets/Fonts/PixelifySans-VariableFont_wght.ttf" id="2_vmjfw"]
[ext_resource type="Theme" uid="uid://dtfrhnr3tljyr" path="res://Assets/Fonts/PageDescription.tres" id="3_55ptn"]
[ext_resource type="Texture2D" uid="uid://bg4kdd25k2j1e" path="res://Assets/Page.png" id="5_4ct4g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmjfw"]
bg_color = Color(1, 0.103463, 0.827571, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55ptn"]
bg_color = Color(1, 0.103107, 0.82779, 1)
corner_detail = 10

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aaour"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cacma"]

[sub_resource type="Theme" id="Theme_4ct4g"]
default_font = ExtResource("2_vmjfw")
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 0
RichTextLabel/font_sizes/bold_font_size = 16
RichTextLabel/styles/focus = SubResource("StyleBoxTexture_aaour")
RichTextLabel/styles/normal = SubResource("StyleBoxTexture_cacma")

[node name="PageResult" type="TextureRect"]
texture = ExtResource("1_4qyb6")
stretch_mode = 2
script = ExtResource("2_55ptn")

[node name="CorrectOrNotLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 297.0
offset_right = 961.0
offset_bottom = 118.0
theme = ExtResource("3_55ptn")
theme_override_font_sizes/normal_font_size = 26
theme_override_styles/fill = SubResource("StyleBoxFlat_vmjfw")
theme_override_styles/background = SubResource("StyleBoxFlat_55ptn")
bbcode_enabled = true
text = "CASO: (BLANK)
CERTO OU ERRADO????"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ViolatedDirectivesLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = 121.0
offset_right = 955.0
offset_bottom = 393.0
theme = ExtResource("3_55ptn")
theme_override_colors/default_color = Color(0.873595, 0.881593, 0, 1)
theme_override_font_sizes/normal_font_size = 18
theme_override_styles/fill = SubResource("StyleBoxFlat_vmjfw")
theme_override_styles/background = SubResource("StyleBoxFlat_55ptn")
bbcode_enabled = true
text = "Diretrizes violadas:

NENHUMA
1.1 -
1.2 -
1.3 -
etc....."

[node name="PageDescriptions" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="PageDescriptions"]
layout_mode = 0
offset_left = 17.0
offset_top = 11.0
offset_right = 279.0
offset_bottom = 35.0
theme = SubResource("Theme_4ct4g")
bbcode_enabled = true
text = "Insert Title of Page ™"
scroll_following = true
vertical_alignment = 1

[node name="SoftwareDescription" type="RichTextLabel" parent="PageDescriptions"]
layout_mode = 0
offset_left = 24.0
offset_top = 45.0
offset_right = 143.0
offset_bottom = 144.0
theme = ExtResource("3_55ptn")
theme_override_fonts/normal_font = ExtResource("2_vmjfw")
bbcode_enabled = true
text = "Descrição do Software:
Software Description"
fit_content = true
scroll_active = false
tab_size = 5

[node name="SoftwareManagement" type="RichTextLabel" parent="PageDescriptions"]
layout_mode = 0
offset_left = 23.0
offset_top = 162.0
offset_right = 143.0
offset_bottom = 264.0
theme = ExtResource("3_55ptn")
bbcode_enabled = true
text = "Como o software irá se manter:
How the software will hold up"
scroll_following = true

[node name="ContextAndUsage" type="RichTextLabel" parent="PageDescriptions"]
layout_mode = 0
offset_left = 162.0
offset_top = 45.0
offset_right = 273.0
offset_bottom = 264.0
theme = ExtResource("3_55ptn")
bbcode_enabled = true
text = "Contexto de uso e implicações:
Context of use and implications"
scroll_following = true

[node name="WorkplaceDescription" type="RichTextLabel" parent="PageDescriptions"]
layout_mode = 0
offset_left = 24.0
offset_top = 283.0
offset_right = 274.0
offset_bottom = 370.0
theme = ExtResource("3_55ptn")
bbcode_enabled = true
text = "Ambiente de trabalho: 
Workplace ambient"
scroll_following = true

[node name="StampMask" type="TextureRect" parent="."]
clip_children = 1
layout_mode = 0
offset_right = 289.0
offset_bottom = 382.0
texture = ExtResource("5_4ct4g")
